refactor(test): remove synthetic CLI tests, add E2E isolation
- Remove 'CLI Command Parsing' suite testing hand-rolled Commander program
- Remove 'CLI hook-trigger validation' suite testing JSON.parse/array.includes
- Read version from package.json instead of hardcoded 0.1.0
- Use absolute cliPath and cwd: tempDir for proper E2E isolation
- Fix bin/cli.ts to read version from package.json

--- a/docs/components/parallel.mdx
+++ b/docs/components/parallel.mdx
@@ -7,6 +7,10 @@ description: Execute children concurrently within a Phase
 
 The `<Parallel>` component enables concurrent execution of child components. By default, Steps within a Phase execute sequentially—wrap them in Parallel to execute simultaneously.
 
+<Warning>
+**Experimental.** Parallel execution works but has limitations with phase advancement. See limitations section below.
+</Warning>
+
 ## Basic Usage
 
 ```tsx
