--- a/docs/components/smithers.mdx
+++ b/docs/components/smithers.mdx
@@ -7,6 +7,10 @@ description: Spawn a new Smithers instance for complex subtasks
 
 The `<Smithers>` component spawns a new Smithers instance to plan and execute complex subtasks. It uses a planner model to generate the orchestration script and an execution model to run the agents.
 
+<Warning>
+**Experimental.** Nested orchestration using a planner model to generate scripts. API may change.
+</Warning>
+
 ## Basic Usage
 
 ```tsx
