--- a/docs/guides/mcp-integration.mdx
+++ b/docs/guides/mcp-integration.mdx
@@ -48,6 +48,10 @@ import { Sqlite } from "smithers-orchestrator";
 
 ## Custom MCP Configuration
 
+<Warning>
+**Experimental.** The `tools` prop API is functional but may change. For most use cases, prefer the built-in `<Sqlite>` component.
+</Warning>
+
 For advanced MCP setups, configure tools directly:
 
 ```tsx
