fix: TypeScript strictness, JSX intrinsic elements, and test expectations
- amp-cli/executor.ts: Add type guards for proc.stdin/stdout/stderr
- amp-cli/output-parser.ts: Fix exactOptionalPropertyTypes compatibility
- claude-cli/executor.ts: Use spread for optional properties, delete vs undefined
- Git/Commit.tsx, Review/Review.tsx: Spread optional cwd/model props
- Human.tsx: Use empty string as parseJson fallback
- tools/tool-to-mcp.ts: Use bracket notation for index signatures
- tui/appNavigation.tsx: Use React.ReactElement instead of JSX.Element
- jsx.d.ts: Add ci-failure-run and post-commit-run intrinsic elements
- Update tests for generateMCPServerConfig new naming (sqlite-{basename})
- Fix Parallel test to match sequential activation behavior

--- a/docs/components/parallel.mdx
+++ b/docs/components/parallel.mdx
@@ -114,7 +114,7 @@ The Parallel component wraps children in a `StepRegistryProvider` with `isParall
 
 - Parallel uses a nested step registry; when used directly under a Phase it registers as a single step group
 - Nested Parallel inside a Step remains scoped to that Step
-- Completion still depends on step task tracking; long-running unrelated tasks can delay Parallel completion
+- Children render only while the parallel group is active, matching Step gating semantics
 </Warning>
 
 For reliable phase-based workflows, wrap each Phase's content in explicit Steps:
