--- a/docs/examples/multi-phase-review.mdx
+++ b/docs/examples/multi-phase-review.mdx
@@ -26,16 +26,16 @@ import {
 import { useQueryValue } from "smithers-orchestrator/reactive-sqlite";
 
 async function main() {
-  const db = await createSmithersDB({ path: ".smithers/review-workflow" });
+  const db = createSmithersDB({ path: ".smithers/review-workflow" });
 
   // Resume if incomplete execution exists
   let executionId: string;
-  const incomplete = await db.execution.findIncomplete();
+  const incomplete = db.execution.findIncomplete();
   if (incomplete) {
     executionId = incomplete.id;
     console.log("Resuming execution:", executionId);
   } else {
-    executionId = await db.execution.start("Review Workflow", "review-workflow.tsx");
+    executionId = db.execution.start("Review Workflow", "review-workflow.tsx");
   }
 
   function ReviewWorkflow() {
@@ -126,16 +126,16 @@ async function main() {
     const root = createSmithersRoot();
     await root.mount(App);
 
-    await db.execution.complete(executionId, {
+    db.execution.complete(executionId, {
       summary: "Review workflow completed",
       output: { finalPhase: db.state.get("phase") },
     });
   } catch (err) {
     const error = err instanceof Error ? err : new Error(String(err));
-    await db.execution.fail(executionId, error.message);
+    db.execution.fail(executionId, error.message);
     throw error;
   } finally {
-    await db.close();
+    db.close();
   }
 }
 
